# FlexASIO

./: .gitignore  .gitmodules  ASIOBridge.sln  ASIOBridge.vcxproj  BACKENDS.md  CONFIGURATION.md  CopyPortAudioPDBs.props  FAQ.md  FlexASIO.props  FlexASIO.sln  FlexASIO.vcxproj  LICENSE.txt  README.md  Release.props  asiobridge.cpp  asiobridge.h  asiobridge.idl  asiobridge.rc  asiobridge.rc.h  asiobridge.rgs  comdll.cpp  dll.def  find_visual_studio.ps1  flexasio.cpp  flexasio.h  flexasio.rc.h  installer.iss  util.h  version.ps1  versioninfo.rc
.github/workflows/: continuous-integration.yml  format.yml
ASIOHost/: ASIOHost.props  ASIOHost.vcxproj
FlexASIO/: FlexASIO.props  FlexASIO.vcxproj  cflexasio.cpp  cflexasio.h  comdll.cpp  config.cpp  config.h  create.cpp  create.h  flexasio.cpp  flexasio.h  flexasio.idl  flexasio.rc  flexasio.rgs  log.cpp  log.h  util.h
FlexASIOTest/: FlexASIOTest.props  FlexASIOTest.vcxproj  test.cpp
FlexASIOUtil/: FlexASIOUtil.props  FlexASIOUtil.vcxproj  asio.cpp  asio.h  endian.h  find.h  log.cpp  log.h  portaudio.cpp  portaudio.h  shell.cpp  string.h  version.cpp  version.h
PortAudioDevices/: PortAudioDevices.props  PortAudioDevices.vcxproj  list.cpp
src/: .gitignore  CMakeLists.txt  Debug.props  FlexASIO.props  README.md  build_msvc.bat  build_msvc.cmake  check_git_submodule.cmake  find_visual_studio.ps1  installer.cmake  installer.in.iss  installer.iss  installer_build.bat  portaudio.cmake  portaudio_version_stamp.cmake  portaudio_version_stamp.in.h  version.cmake  version.in.h  version_header.cmake  versioninfo.rc
src/ASIOHost/: ASIOHost.props  ASIOHost.vcxproj  CMakeLists.txt
src/ASIOTest/: CMakeLists.txt  dll.def  test.cpp  test.h
src/CMakeModules/: FindVisualStudio_VsDevCmd.cmake  FindVisualStudio_cmake.cmake  Findportaudio.cmake  Findtinytoml.cmake
src/FlexASIO/: CMakeLists.txt  FlexASIO.vcxproj  cflexasio.cpp  config.h  flexasio.cpp  flexasio.h  flexasio.rgs
src/FlexASIOTest/: CMakeLists.txt  FlexASIOTest.props  test.cpp
src/FlexASIOUtil/: CMakeLists.txt  asio.cpp  asio.h  endian.cpp  log.cpp  log.h  portaudio.cpp  shell.h  version.cpp
src/PortAudioDevices/: CMakeLists.txt
src/dechamps_ASIOUtil/: CMakeLists.txt  asio.cpp  asio.h
src/dechamps_CMakeUtils/: FindInnoSetup.cmake  FindVisualStudio.cmake  FindVisualStudio_VsDevCmd.cmake  FindVisualStudio_cmake.cmake  Findvswhere.cmake  build_msvc.bat  build_msvc.cmake  execute_process_or_die.cmake
src/dechamps_CMakeUtils/version/: CMakeLists.txt  version.c  version.cmake  version.cpp  version.h  version_stamp.cmake  version_stamp.in.h
src/dechamps_cpplog/: CMakeLists.txt  log.cpp  log.h
src/dechamps_cpputil/: CMakeLists.txt  endian.in.h  find.h  string.h
src/endian/: CMakeLists.txt
src/flexasio/: CMakeLists.txt  versioninfo.rc
src/flexasio/CMakeModules/: Findportaudio.cmake  Findtinytoml.cmake
src/flexasio/FlexASIO/: CMakeLists.txt  cflexasio.cpp  comdll.cpp  config.cpp  config.h  control_panel.cpp  control_panel.h  dll.def  flexasio.cpp  flexasio.h  flexasio.idl  flexasio.manifest  log.cpp  log.h  portaudio.cpp  portaudio.h
src/flexasio/FlexASIOTest/: CMakeLists.txt  main.cpp  test.cpp  test.h
src/flexasio/FlexASIOUtil/: CMakeLists.txt  asio.cpp  asio.h  log.cpp  log.h  portaudio.cpp  portaudio.h  shell.cpp  shell.h  variant.h  windows_com.cpp  windows_com.h  windows_error.cpp  windows_error.h  windows_registry.cpp  windows_registry.h  windows_string.cpp  windows_string.h
src/flexasio/PortAudioDevices/: CMakeLists.txt  list.cpp
src/flexasio/asiosdk/: CMakeLists.txt
src/flexasio/endian/: endian.in.h
src/flexasio/version/: CMakeLists.txt  version.h
src/version/: version.cpp
